<resources>
    <string name="app_name">ViewsActivity_Tan</string>
    <string name="full_name_label" translatable="false">fullname</string>
    <string name="last_name_hint">Last Name</string>
    <string name="home_address_label">Home Address</string>
    <string name="house_number_hint">House #</string>
    <string name="street_name_hint">Street Name</string>
    <string name="subdivision_name_hint">Subdivision/Housing Name</string>
    <string name="city_name_hint">City Name</string>
    <string name="country_name_hint">Country Name</string>
    <string name="notes_label">Notes</string>
    <string name="notes_hint">Comments/Notes</string>
    <string name="back_button">>> Back</string>
    <string name="save_button">Save</string>
    <string name="title_activity_dashboard" translatable="false">dashboard</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="first_name_hint">First Name</string>
</resources>